# imu_initialization

./: .gitignore  CMakeLists.txt  README.md  build.sh
Thirparty/ORB_SLAM2/Examples/Monocular/EuRoC_TimeStamps/: MH05_2.txt  V102_2.txt  V103_2.txt  V103_3.txt  V202_2.txt
Thirparty/ORB_SLAM2/src/: LocalMapping.cc  LoopClosing.cc  Tracking.cc
data/MH_01_easy/: KeyFrameTrajectory.txt
data/MH_02_easy/: KeyFrameTrajectory.txt
data/MH_03_medium/: KeyFrameTrajectory.txt
data/MH_04_difficult/: KeyFrameTrajectory.txt
data/MH_05_difficult/: KeyFrameTrajectory.txt
data/MH_05_difficult2/: KeyFrameTrajectory.txt
data/V1_01_easy/: KeyFrameTrajectory.txt
data/V1_02_medium/: KeyFrameTrajectory.txt
data/V1_02_medium2/: KeyFrameTrajectory.txt
data/V1_03_difficult/: KeyFrameTrajectory.txt
data/V1_03_difficult/state_groundtruth_estimate0/: sensor.yaml
data/V1_03_difficult2/: KeyFrameTrajectory.txt
data/V2_01_easy/: KeyFrameTrajectory.txt
data/V2_02_medium/: KeyFrameTrajectory.txt
data/V2_02_medium2/: KeyFrameTrajectory.txt
data/V2_03_difficult/: KeyFrameTrajectory.txt
include/: imu_ceres.h  imu_preintegration.h  io.h  methods.h  perfect_simulation.h  polynomial.h  simulation.h  so3.h
include/util/: alignment.h  args.h  csv.h  eigen_defs.h  macros.h  random.h  string.h  svd.h  timer.h
scripts/: experiment01.sh  experiment01c.sh  experiment02.sh
scripts/matlab/: aconfig.m  euroc_imu_bias.m  experiment01.m  experiment01c.m  experiment02.m  imu_eqs.m
src/: experiment01.cc  experiment01a.cc  experiment01b.cc  experiment01c.cc  experiment02.cc  imu_preintegration.cc  polynomial.cc  random.cc  so3.cc  string.cc  timer.cc
